--- a/docker-compose_3_broker.yaml
+++ b/docker-compose_3_broker.yaml
@@ -28,7 +28,45 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-1:19092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
+  kafka-broker-2:
+    image: confluentinc/cp-kafka:7.3.2
+    restart: always
+    hostname: kafka-broker-2
+    ports:
+      - "127.0.0.1:29092:29092"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-2:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
+  kafka-broker-3:
+    image: confluentinc/cp-kafka:7.3.2
+    restart: always
+    hostname: kafka-broker-3
+    ports:
+      - "127.0.0.1:39092:39092"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-3:39092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
     logging:
       driver: "json-file"
       options:
@@ -41,6 +79,8 @@ services:
     hostname: schema-registry
     depends_on:
       - kafka-broker-1
+      - kafka-broker-2
+      - kafka-broker-3
       - zookeeper
     ports:
       - "127.0.0.1:8081:8081"
@@ -48,7 +88,7 @@ services:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka-broker-1:19092
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka-broker-1:19092,kafka-broker-2:29092,kafka-broker-3:39092
       SCHEMA_REGISTRY_DEBUG: 'true'
     logging:
       driver: "json-file"
@@ -67,7 +107,7 @@ services:
       KAFKA_REST_ID: kafka-rest-server
       KAFKA_REST_LISTENERS: http://0.0.0.0:8082
       KAFKA_REST_SCHEMA_REGISTRY_URL: http://0.0.0.0:8081
-      KAFKA_REST_BOOTSTRAP_SERVERS: kafka-broker-1:19092
+      KAFKA_REST_BOOTSTRAP_SERVERS: kafka-broker-1:19092,kafka-broker-2:29092,kafka-broker-3:39092
     logging:
       driver: "json-file"
       options:
@@ -82,11 +122,13 @@ services:
       - "127.0.0.1:8083:8083"
     depends_on:
       - kafka-broker-1
+      - kafka-broker-2
+      - kafka-broker-3
       - schema-registry
       - zookeeper
       - kafka-rest
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: kafka-broker-1:19092
+      CONNECT_BOOTSTRAP_SERVERS: kafka-broker-1:19092,kafka-broker-2:29092,kafka-broker-3:39092
       CONNECT_REST_PORT: 8083
       CONNECT_REST_ADVERTISED_HOST_NAME: kafka-connect
       CONNECT_GROUP_ID: kafka-connect-group
@@ -128,6 +170,8 @@ services:
       - "127.0.0.1:6680:6680"
     depends_on:
       - kafka-broker-1
+      - kafka-broker-2
+      - kafka-broker-3
       - schema-registry
       - zookeeper
       - kafka-rest
@@ -136,7 +180,7 @@ services:
       SERVER_PORT: 6680
       LOGGING_LEVEL_ROOT: info
       KAFKA_CLUSTERS_0_NAME: OFOOD-Kafka-Cluster
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-broker-1:19092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-broker-1:19092,kafka-broker-2:29092,kafka-broker-3:39092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
       KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:8081
       KAFKA_CLUSTERS_0_KAFKACONNECT_0_NAME: kafka-connect
