[ADD]: edit docker compose files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,8 +40,8 @@ services:
     restart: always
     hostname: schema-registry
     depends_on:
-      - kafka-broker-1
       - zookeeper
+      - kafka-broker-1
     ports:
       - "127.0.0.1:8081:8081"
     environment:
@@ -60,6 +60,9 @@ services:
     image: confluentinc/cp-kafka-rest:7.3.2
     restart: always
     container_name: kafka-rest
+    depends_on:
+      - zookeeper
+      - kafka-broker-1
     ports:
       - "127.0.0.1:8082:8082"
     environment:
@@ -81,10 +84,9 @@ services:
     ports:
       - "127.0.0.1:8083:8083"
     depends_on:
+      - zookeeper
       - kafka-broker-1
       - schema-registry
-      - zookeeper
-      - kafka-rest
     environment:
       CONNECT_BOOTSTRAP_SERVERS: kafka-broker-1:19092
       CONNECT_REST_PORT: 8083
@@ -127,9 +129,9 @@ services:
     ports:
       - "127.0.0.1:6680:6680"
     depends_on:
+      - zookeeper
       - kafka-broker-1
       - schema-registry
-      - zookeeper
       - kafka-rest
       - kafka-connect
     environment:
@@ -150,7 +152,6 @@ services:
         max-size: "10m"
         max-file: "10"
 
-
   postgres:
     image: postgres:16.0-alpine3.18
     container_name: postgres-database
@@ -166,13 +167,18 @@ services:
       - "-c"
       - "wal_level=logical"
     ports:
-      - '6032:5432'
+      - '127.0.0.1:5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     depends_on:
+      - zookeeper
       - kafka-broker-1
       - schema-registry
-      - zookeeper
       - kafka-rest
       - kafka-connect
       - kafka-ui
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
